test/classes/diten/error_default_field_init.good
error_default_field_init.chpl:7: error: type mismatch in assignment from real(64) to int(64)
