test/classes/diten/error_default_field_init.prediff
#! /bin/sh
sed -e 's;\[[^[]*];;' $2 > $2.tmp
mv $2.tmp $2
